# itoi

./: .gitignore  CMakeLists.txt  main.cpp
common/: AbstractImg.cpp  AbstractImg.h  Filter.cpp  Filter.h  Kernels.cpp  Kernels.h  LoadedImg.cpp  LoadedImg.h  ProcessingImg.cpp  ProcessingImg.h
common/border/: CopyPolicy.cpp  CopyPolicy.h  IBorderPolicy.cpp  IBorderPolicy.h  MirrorPolicy.cpp  MirrorPolicy.h  SymmetryPolicy.cpp  SymmetryPolicy.h  ZeroPolicy.cpp  ZeroPolicy.h
core/: DoubleImage.cpp  DoubleImage.h  DoubleImageBorderPolicy.cpp  DoubleImageBorderPolicy.h  FilterUtil.cpp  FilterUtil.h  InputImage.cpp  InputImage.h  helper.cpp  helper.h
demonstration/: Lab1.cpp  Lab1.h  Lab2.cpp  Lab2.h  Lab3.cpp  Lab3.h  Lab4.cpp  Lab4.h  Lab5.h
descriptor/: AbstractDescriptor.cpp  AbstractDescriptor.h  AbstractDescriptorFactory.cpp  AbstractDescriptorFactory.h  Basket.cpp  Basket.h  DescriptorDrawer.cpp  DescriptorDrawer.h  DescriptorPair.cpp  DescriptorPair.h  DescriptorUtil.cpp  DescriptorUtil.h  Histogram.cpp  Histogram.h  HistogramCreator.cpp  HistogramCreator.h  HistogramDescriptor.cpp  HistogramDescriptor.h  HistogramFactory.cpp  HistogramFactory.h  MatchInfo.cpp  MatchInfo.h  PatchCreator.cpp  PatchCreator.h  PatchDescriptor.cpp  PatchDescriptor.h  Sift.cpp  Sift.h  SiftBasket.cpp  SiftBasket.h  SiftCreator.cpp  SiftCreator.h  SiftDescriptor.cpp  SiftDescriptor.h  SiftFactory.cpp  SiftFactory.h
distortions/: AbstractDistortion.cpp  AbstractDistortion.h  Contrast.cpp  Contrast.h  Distortion.cpp  Distortion.h  Noise.cpp  Noise.h  Rotate.cpp  Rotate.h  Scale.cpp  Scale.h  Shift.cpp  Shift.h
filter/: FilterUtil.cpp  FilterUtil.h  Kernels.cpp  Kernels.h
filter/border/: CopyPolicy.cpp  CopyPolicy.h  IBorderPolicy.cpp  IBorderPolicy.h  MirrorPolicy.cpp  MirrorPolicy.h  Policies.cpp  Policies.h  SymmetryPolicy.cpp  SymmetryPolicy.h  ZeroPolicy.cpp  ZeroPolicy.h
octave/: Element.h  Octave.cpp  Octave.h  OctaveElement.cpp  OctaveElement.h  OctaveFactory.cpp  OctaveFactory.h  OctavesCreator.cpp  OctavesCreator.h
point/: AbstractInterestPointsAlgo.cpp  AbstractInterestPointsAlgo.h  AbstractPointsFinder.cpp  AbstractPointsFinder.h  AnglePoint.cpp  AnglePoint.h  Harris.cpp  Harris.h  Moravec.cpp  Moravec.h  Point.cpp  Point.h
test/: Lab2.cpp  Lab2.h  Lab3.h  Lab4.cpp  Lab4.h  Lab5.cpp  Lab5.h
